# o-ran

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  conanfile.txt  main.cpp  o-ran.cfg
controller/: Controller.cpp  Controller.h
libs/: utils.h
reader/: IReader.h  JSONReader.cpp  JSONReader.h
writer/: ConsoleWriter.cpp  ConsoleWriter.h  HTTPWriter.cpp  HTTPWriter.h  IWriter.h
